--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ header {
   top: 0;
   left: 0;
 }
+
 nav {
   background-color: #f8f9fa;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
@@ -118,33 +119,113 @@ nav li:first-child {
 
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.images img:nth-child(1) {
-  transform: rotate(-5deg);
-}
-.images img:nth-child(2) {
-  transform: translateY(-20px);
-}
-.images img:nth-child(3) {
-  transform: rotate(5deg);
-}
 
 .images img:hover {
-  transform: scale(1.05) rotate(-3deg);
+  transform: scale(1.05);
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.images img:nth-child(1):hover {
-  transform: scale(1.05) rotate(-8deg);
+.slider-section {
+  padding: 17px 0;
+}
+.slider-container {
+  display: flex;
+  padding: 0 35px;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: linear-gradient(to left top, #ff9999, #ff6347);
+}
+.wrapper {
+  max-width: 1100px;
+  width: 100%;
+  position: relative;
+}
+.wrapper i {
+  top: 50%;
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+  font-size: 1.25rem;
+  position: absolute;
+  text-align: center;
+  line-height: 50px;
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+  transform: translateY(-50%);
+  transition: transform 0.1s linear;
+}
+.wrapper i:active {
+  transform: translateY(-50%) scale(0.85);
+}
+.wrapper i:first-child {
+  left: -22px;
+}
+.wrapper i:last-child {
+  right: -22px;
+}
+.wrapper .carousel {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: calc((100% / 3) - 12px);
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  gap: 16px;
+  border-radius: 8px;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+.carousel::-webkit-scrollbar {
+  display: none;
+}
+.carousel.no-transition {
+  scroll-behavior: auto;
+}
+.carousel.dragging {
+  scroll-snap-type: none;
+  scroll-behavior: auto;
+}
+.carousel.dragging .card {
+  cursor: grab;
+  user-select: none;
+}
+.carousel :where(.card, .img) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.carousel .card {
+  scroll-snap-align: start;
+  height: 342px;
+  list-style: none;
+  background: #fff;
+  cursor: pointer;
+  flex-direction: column;
+  border-radius: 8px;
 }
 
-.images img:nth-child(2):hover {
-  transform: scale(1.05) translateY(-20px) rotate(3deg);
+.card .img img {
+  height: 310px;
+  aspect-ratio: 9/12;
+  border-radius: 1rem;
+  object-fit: cover;
+  border: 4px solid #fff;
 }
 
-.images img:nth-child(3):hover {
-  transform: scale(1.05) rotate(8deg);
-}
+@media screen and (max-width: 900px) {
+  .wrapper .carousel {
+    grid-auto-columns: calc((100% / 2) - 9px);
+  }
 
+  .images {
+    flex-direction: column;
+  }
+  .images img {
+    width: 380px;
+  }
+}
 @media (max-width: 768px) {
   .hideOnMobile {
     display: none;
@@ -153,31 +234,17 @@ nav li:first-child {
     display: block;
   }
 }
+@media screen and (max-width: 600px) {
+  .wrapper .carousel {
+    grid-auto-columns: 100%;
+  }
+
+  .images img {
+    width: 320px;
+  }
+}
 @media (max-width: 400px) {
   .sidebar {
     width: 100%;
   }
 }
-
-/* @media (min-width: 640px) {
-  .section-header {
-    font-size: 6rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .section-header {
-    font-size: 7rem; 
-  }
-
-  .section-subtitle {
-    font-size: 1.25rem; 
-  }
-}
-
-@media (min-width: 1024px) {
-  .section-header {
-    font-size: 5rem; 
-    letter-spacing: -0.025em; 
-  }
-} */
